test/sema/traits/impl_lookup_not_a_trait.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {}

fn main() {
  // CHECK: [[# @LINE + 1]]:11: error: A is not a trait
  S::impl A::foo();
}
